[DSTEW-POC] - Capture JSON failures
